--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,19 @@
-body { margin: 0; padding: 10px; width: 230px; }
+::-webkit-scrollbar{ width: 2px; background-color: #ffffff; }
+::-webkit-scrollbar-track{ background-color: #ffffff; }
+::-webkit-scrollbar-thumb{ box-shadow: inset 0 0 1px rgba(0,0,0,.3); background-color: #bdbdbd; }
 
+body { margin: 0; padding: 10px; width: 230px; overflow: scroll; }
+ul { list-style: none; padding: 0; }
+
+section { clear: both; }
 section + section { margin-top: 10px; }
 section input[type="checkbox"] { vertical-align: text-top; }
 
-section > label > input:first-child ~ input { display: none; }
-section > label > input:first-child:checked ~ input { display: block; margin: 5px 0 0 20px; width: 210px; }
+section > input:first-child ~ input,
+section > input:first-child ~ ul { display: none; }
+section > input:first-child:checked ~ input,
+section > input:first-child:checked ~ ul { display: block; margin: 5px 0 0 20px; width: 210px; }
 
-#settings-notification { display: none; margin-left: 5px; color: #00C665; }
+.settings-notification { display: none; margin-left: 5px; color: #00C665; }
+div > .settings-save { float: right; }
+div > .settings-notification { float: right; margin-right: 5px; }
