--- a/styles.css
+++ b/styles.css
@@ -2,17 +2,15 @@
 ::-webkit-scrollbar-track{ background-color: #ffffff; }
 ::-webkit-scrollbar-thumb{ box-shadow: inset 0 0 1px rgba(0,0,0,.3); background-color: #bdbdbd; }
 
-body { margin: 0; padding: 10px; width: 230px; overflow: scroll; }
+body { margin: 0; padding: 10px; width: 270px; overflow: scroll; }
 ul { list-style: none; padding: 0; }
 
 section { clear: both; }
 section + section { margin-top: 10px; }
 section input[type="checkbox"] { vertical-align: text-top; }
 
-section > input:first-child ~ input,
-section > input:first-child ~ ul { display: none; }
-section > input:first-child:checked ~ input,
-section > input:first-child:checked ~ ul { display: block; margin: 5px 0 0 20px; width: 210px; }
+section > input:first-child + label ~ * { display: none; }
+section > input:first-child:checked + label ~ * { display: block; margin: 5px 0 0 20px; width: 250px; }
 
 .settings-notification { display: none; margin-left: 5px; color: #00C665; }
 div > .settings-save { float: right; }
