--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
-::-webkit-scrollbar{ width: 2px; background-color: #ffffff; }
-::-webkit-scrollbar-track{ background-color: #ffffff; }
-::-webkit-scrollbar-thumb{ box-shadow: inset 0 0 1px rgba(0,0,0,.3); background-color: #bdbdbd; }
+::-webkit-scrollbar{ width: 0; }
 
-body { margin: 0; padding: 10px; width: 270px; overflow: scroll; }
+body { margin: 0; padding: 10px; width: 270px; }
 ul { list-style: none; padding: 0; }
+
+.right { float: right;  }
 
 section { clear: both; }
 section + section { margin-top: 10px; }
@@ -12,6 +12,5 @@ section input[type="checkbox"] { vertical-align: text-top; }
 section > input:first-child + label ~ * { display: none; }
 section > input:first-child:checked + label ~ * { display: block; margin: 5px 0 0 20px; width: 250px; }
 
-.settings-notification { display: none; margin-left: 5px; color: #00C665; }
-div > .settings-save { float: right; }
-div > .settings-notification { float: right; margin-right: 5px; }
+.notification { display: none; margin-left: 5px; color: #00C665; }
+div > .notification { margin-right: 5px; }
