--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,10 @@ section > input:first-child + label ~ * { display: none; }
 section > input:first-child:checked + label ~ * { display: block; margin: 5px 0 0 20px; width: 250px; }
 
 section > div > div * { display: block; margin: 5px 0 0 0; width: 250px; }
+section > div > div > a { color: black; text-align: center; text-decoration: none; }
+section > div > div > a:hover { background-color: #f4f4f4; }
 
-section > div > input:first-child:checked + label ~ div:nth-last-child(3) > div,
+section > div > input:first-child:checked + label ~ div:nth-last-child(3) > a,
 section > div > input:first-child:checked + label ~ div:last-child,
 section > div > input:first-child:checked + label ~ div:nth-last-child(2) { display: none; }
 
