--- a/styles.css
+++ b/styles.css
@@ -21,4 +21,4 @@ section > div > input:first-child:checked + label ~ div:last-child,
 section > div > input:first-child:checked + label ~ div:nth-last-child(2) { display: none; }
 
 .notification { display: none; margin-left: 5px; color: #00C665; }
-div > .notification { margin-right: 5px; }
+.notification.right { margin-right: 5px; }
