--- a/overrides.css
+++ b/overrides.css
@@ -4,3 +4,4 @@ body .header > ul > li:first-child { float: left; }
 body .mm-dropdown.dropdown-user-bar { width: auto; }
 body .navbar-nav > li > ul.dropdown-menu-sites ul.dropdown-menu-static,
 body .dd-content.select-site .dd-content-in { max-height: 600px; }
+body .dd-content.select-test-cont .dd-content-in { max-height: 520px; }
