--- a/overrides.css
+++ b/overrides.css
@@ -5,3 +5,5 @@ body .mm-dropdown.dropdown-user-bar { width: auto; }
 body .navbar-nav > li > ul.dropdown-menu-sites ul.dropdown-menu-static,
 body .dd-content.select-site .dd-content-in { max-height: 600px; }
 body .dd-content.select-test-cont .dd-content-in { max-height: 520px; }
+#main form td[width="200"] { width: auto; }
+.filter-options { width: 76px; }
