--- a/styles.css
+++ b/styles.css
@@ -24,4 +24,9 @@ section > div > input:first-child:checked + label ~ div:nth-last-child(2) { disp
 .notification { display: none; margin-left: 5px; }
 .notification.right { margin-right: 5px; }
 
-#settings-actionLogFiltersList ul { display: inline-block; width: 46.7%; vertical-align: top; }
+#settings-actionLogFiltersList ul {
+    display: inline-block;
+    width: 46.7%;
+    height: 21px;
+    vertical-align: top;
+}
