--- a/overrides.css
+++ b/overrides.css
@@ -4,6 +4,7 @@ body .navbar .brand { color: #0dc324; text-shadow: 0 0 2px #6bffb0; }
 
 body .form-horizontal { display: flex; flex-direction: column; }
 body .form-horizontal .control-group { display: flex; margin: 0; }
+body .form-horizontal .control-group:first-child { margin-top: 30px; }
 .control-group:hover { background-color: #f5f5f5; }
 .control-group + .control-group { border-top: 1px solid #ddd; }
 body .form-horizontal .control-label { margin: 0; padding: 10px 0; width: 100%; text-align: left; cursor: pointer; }
@@ -11,4 +12,3 @@ body .form-horizontal .controls { order: -1; margin: 7px 10px 0; }
 .codilime-swap-order,
 .codilime-swap-order ~ .control-group { order: -1; }
 .control-group.codilime-swap-order { border-top: none; }
-.control-group:first-child { margin-top: 30px; }
